--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,21 +1,26 @@
 name: Update Version on Merge
 
 on:
-  pull_request:
+  push:
     branches:
       - master
 
 jobs:
-  update-version:
+  version-bump:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      
+      - name: Check out code
+        uses: actions/checkout@v3
+
       - name: Bump version and push tag
         run: |
-          git config --global user.name 'Sanks'
-          git config --global user.email 'ms.sankarii@gmail.com'
-          VERSION=`date "+%Y%m%d%H%M%S"` # Simple timestamp-based version
-          git tag $VERSION
-          git push origin --tags
+          # Assuming the version file contains a simple number like 1.0.0
+          VERSION=$(cat VERSION)
+          NEW_VERSION=$(echo $VERSION | awk -F. '{$NF = $NF + 1;} 1' | sed 's/ /./g')
+          echo $NEW_VERSION > VERSION
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add VERSION
+          git commit -m "Bump version to $NEW_VERSION"
+          git tag $NEW_VERSION
+          git push origin main --tags
