--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,6 +19,4 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add VERSION
-          git commit -m "Bump version to $NEW_VERSION"
-          git tag $NEW_VERSION
-          git push origin main --tags
+          git commit -m "Bump version to"       
