--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,5 +18,5 @@ jobs:
           echo "HELLO"
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add VERSION
+          git add "HELLO"
           git commit -m "Bump version to"       
