--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,21 +1,21 @@
-name: Update Version on Merge
+name: Run Script
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
-   run-script:
-   runs-on: ubuntu-latest
-   
-  steps:
-  
-  - name: Checkout repository  
-  uses: actions/checkout@v2  
-  - name: Set up Python  
-  uses: actions/setup-python@v2  
-  with:  
-  python-version: '3.9'  
-  - name: Run script  
-  run: print("hello") 
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      - uses: jannekem/run-python-script-action@v1
+        with:
+          script: |
+            import os
+            print("Directory contents:")
+            for f in os.listdir():
+                print(f)
