--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,6 +15,4 @@ jobs:
       - uses: jannekem/run-python-script-action@v1
         with:
           script: |
-            f = open("demofile2.txt", "a")
-            f.write("Now the file has more content!")
-            f.close()
+            print("hello")
