--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
-      - uses: jannekem/run-python-script-action@v1
+      - uses: run-python-script-action@v1
         with:
-          script: |
+          script:
             print("hello")
