--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,6 +16,6 @@ jobs:
         with:
           script: |
             print("hello")
-            f = open("demofile3.txt", "w")
-            f.write("Woops! I have deleted the content!")
-            f.close()
+            f = open("version.txt", "r")
+            for line in f.readlines():
+                print(line)
