--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,3 +19,14 @@ jobs:
             f = open("version.txt", "r")
             for line in f.readlines():
                 print(line)
+            f.close()
+            ver_number = 0
+            if "version" in line:
+                ver_number = line.split("=")[1]
+            ver_number = ver_number + 1
+            f = open("version.txt", "w")
+            f.write(f"VERSION={ver_number}")
+            f.close()
+            print(ver_number)
+            
+                
