--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,6 +23,7 @@ jobs:
             ver_number = 0
             if "version" in line:
                 ver_number = line.split("=")[1]
+            print(ver_number)
             ver_number = ver_number + 1
             f = open("version.txt", "w")
             f.write(f"VERSION={ver_number}")
