--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,14 +17,16 @@ jobs:
           script: |
             print("hello")
             f = open("version.txt", "r")
+            ver_number = 0
             for line in f.readlines():
                 print(line)
-            f.close()
-            ver_number = 0
-            if "version" in line:
-                ver_number = line.split("=")[0]
+                
+                if "version" in line:
+                    ver_number = line.split("=")[0]
+                    break
             print(ver_number)
             ver_number = ver_number + 1
+            f.close()
             f = open("version.txt", "w")
             f.write(f"VERSION={ver_number}")
             f.close()
