--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,10 +25,10 @@ jobs:
                     ver_number = line.split("=")[0]
                     break
             print(ver_number)
-            ver_number = ver_number + 1
+            ver_number = int(ver_number) + 1
             f.close()
             f = open("version.txt", "w")
-            f.write(f"VERSION={ver_number}")
+            f.write(f"VERSION=str(ver_number)")
             f.close()
             print(ver_number)
             
