--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,7 +14,7 @@ jobs:
           python-version: '3.x'
       - uses: jannekem/run-python-script-action@v1
         with:
-          script: |
+          run: |
             print("hello")
             f = open("version.txt", "r")
             ver_number = 0
@@ -30,5 +30,6 @@ jobs:
             f = open("version.txt", "w")
             f.write(f"VERSION=str(ver_number)")
             print(ver_number)
+            
             
                 
