--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,7 +14,7 @@ jobs:
           python-version: '3.x'
       - uses: jannekem/run-python-script-action@v1
         with:
-          run: |
+          script: |
             print("hello")
             f = open("version.txt", "r")
             ver_number = 0
