--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,3 +17,9 @@ jobs:
       - name: execute py script
         run: |
              python version_update.py
+             git config user.name github-actions
+             git config user.email github-actions@github.com
+             git add version_update.py
+             git commit -m "crongenerated"
+             git push
+
