--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,6 +20,6 @@ jobs:
              git config user.name github-actions
              git config user.email github-actions@github.com
              git add .
-             git commit --amend -m "done"
+             git commit -m "done"
              git push
 
