--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,5 +21,5 @@ jobs:
              git config user.email github-actions@github.com
              git add .
              git commit --amend -m "done"
-             git push
+             git push origin HEAD:main
 
